<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="robert.purdey.nfcmanager.ui.activities.NfcWriteActivity">

    <!-- todo: this should come from a fragment -->
    <!-- Longitude input -->
    <EditText
        android:id="@+id/etxt_longitude"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="numberSigned"
        android:hint="@string/hint_longitude"/>

    <!-- Longitude input -->
    <EditText
        android:id="@+id/etxt_latitude"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etxt_longitude"
        android:layout_marginVertical="5dp"
        android:inputType="numberSigned"
        android:hint="@string/hint_latitude" />

    <!-- Writes content to NFC tag -->
    <Button
        android:id="@+id/bttn_write"
        android:textColor="@color/black"
        android:background="@color/bttn_orange"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_above="@+id/bttn_other"
        android:text="@string/write"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="3dp"
        android:onClick="onClickWrite"/>

</RelativeLayout>
